    but use a new library function to fetch the ``API`` object from the
    environ.

Bugs Fixed
~~~~~~~~~~

- Fix http://bugs.repoze.org/issue102: when no challengers existed,
  logging would cause an exception.

- Remove ``ez_setup.py`` and dependency on it in setup.py (support
  distribute).

Backward Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~

- The ``repoze.who.middleware:PluggableAuthenticationMiddleware`` class
  no longer has the following (non-API) methods (now made API methods
  of the ``repoze.who.api:API`` class):

  - ``add_metadata``
  - ``authenticate``
  - ``challenge``
  - ``identify``

- The following (non-API) functions moved from ``repoze.who.middleware`` to
  ``repoze.who.api``:
  
  - ``make_registries``
  - ``match_classification``
  - ``verify``


1.0.18 (2009-11-05)
-------------------

- Issue #104:  AuthTkt plugin was passing an invalid cookie value in
  headers from ``forget``, and was not setting the ``Max-Age`` and 
  ``Expires`` attributes of those cookies.


1.0.17 (2009-11-05)
-------------------

- Fixed the ``repoze.who.plugins.form.make_plugin`` factory's ``formcallable``
  argument handling, to allow passing in a dotted name (e.g., from a config
  file).


1.0.16 (2009-11-04)
-------------------

- Exposed ``formcallable`` argument for ``repoze.who.plugins.form.FormPlugin``
  to the callers of the ``repoze.who.plugins.form.make_plugin`` factory.
  Thanks to Roland Hedburg for the report.

- Fixed an issue that caused the following symptom when using the
  ini configuration parser::

   TypeError: _makePlugin() got multiple values for keyword argument 'name'

  See http://bugs.repoze.org/issue92 for more details.  Thanks to vaab
  for the bug report and initial fix.


1.0.15 (2009-06-25)
-------------------

- If the form post value ``max_age`` exists while in the ``identify``
  method is handling the ``login_handler_path``, pass the max_age
  value in the returned identity dictionary as ``max_age``.  See the